fix(css): removed overflow hidden

--- a/src/jquery.slide.scss
+++ b/src/jquery.slide.scss
@@ -1,5 +1,4 @@
 .slide-js-wrapper {
-    overflow: hidden;
     position: relative;
     .slide-js-list {
         width: 100%;
